# audio_crash

./: .gitignore  CMakeLists.txt  audio_convert.cc  audio_cut.cc  audio_gradient.cc  audio_volume.cc  bleu.cc  build-ffmpeg.sh  build.sh  edit_pass.cc  media_duration.cc  resample.h  version.h  video_thumbnail.cc
ffmpeg-4.2/: build_android.sh  build_x86.sh
ffmpeg-4.2/arm64/include/libavutil/: ffversion.h
ffmpeg-4.2/libavformat/: mux.c
ffmpeg-4.2/x86/include/libavutil/: ffversion.h
